--- a/corona_tracker_Jquery.html
+++ b/corona_tracker_Jquery.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<font color="red">Corona Tracker By Country </font> <br>
+<font color="red"><b>Corona Tracker By Country</b> </font> <br>
 <input type="text" id="myInput">
 <button type="button" id="myBtn">Country</button>
 
