--- a/index.html
+++ b/index.html
@@ -1,12 +1,118 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <title>Corona Status by Map - Rabi</title>
+  <link rel="stylesheet" href="jquery-jvectormap-2.0.5.css" type="text/css" media="screen"/>
+  
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> 
+  <script src="jquery-jvectormap-2.0.5.min.js"></script> 
+  <script src="jquery-jvectormap-world-merc.js"></script> 
+  <!-- <script src="https://jvectormap.com/js/jquery-jvectormap-world-merc.js"></script>  -->
+  <!-- <script src="https://cdn.jsdelivr.net/npm/jvectormap@2.0.5/jquery-jvectormap.min.js"></script> -->
+  <!-- <script src="world.js"></script> -->
+  <!-- <script src="jquery.js"></script> -->
+  <!-- <script src="jquery-jvectormap-world-mill.js"></script> -->
+  <script>
+    
+    //M-1
+    /*entireWorld();
+   function entireWorld()
+   {
+      $(function(){
+          $('#world-map').vectorMap({map: 'world_merc'});
+        });
+    } */
+
+//M-1A
+var infectedData={};
+latestCoronaStatus();
+function latestCoronaStatus()
+{
+  $.ajax({
+
+      url: "https://corona.lmao.ninja/countries",
+      dataType: "json",
+      crossDomain:true,
+      success: function( response ) {
+          for(var i=0;i<response.length;i++)
+          {
+              var elem=response[i].country;
+              var cases= response[i].cases;
+              var country= response[i].countryInfo.iso2;
+              var deaths= response[i].deaths;
+              var recovered= response[i].recovered;
+
+              //infectedData[country]= cases;
+              infectedData[country]="--Total Case= "+cases 
+                                    +"--deaths="+deaths
+                                    +"--recovered ="+recovered;
+                      
+          }
+          $('#world-map').vectorMap({
+              map: 'world_merc',
+              series: {
+                regions: [{
+                  values: infectedData,
+                  scale: ['#C8EEFF', '#0071A4'],
+                  normalizeFunction: 'polynomial'
+                }]
+              },
+            onRegionTipShow: function(e, el, code){
+             // console.log("UUUUUUU2222--> "+"##### code=  "+code +">>>>"+infectedData[code] );
+              el.html(el.html()+' (CORONA '+infectedData[code]+')');
+            }
+          });
+      }
+
+      });
+}
+  </script> 
+
+<script type="text/javascript">
+
+  var flagOfCountry;
+  
+  $(document).ready(function(){
+      // Get value on button click and show alert
+      $("#myBtn").click(function(){
+          var countryName = $("#myInput").val();
+         // alert(str);
+         showCountryStatus(countryName);
+  
+      });
+  });
+  
+  function showCountryStatus(countryName)
+  {
+  $.ajax({
+  
+      url: "https://covid19-server.chrismichael.now.sh/api/v1/ReportsByCountries/"+countryName,
+      dataType: "json",
+      crossDomain:true,
+      success: function( response ) {
+        var stringResponse= JSON.parse(JSON.stringify(response));
+        var flagOfCountry= stringResponse.report.flag;
+          console.log("ppa= "+stringResponse.report.country );
+         document.getElementById("countryAffected").innerHTML = stringResponse.report.country;
+         document.getElementById("caseReported").innerHTML = stringResponse.report.cases;
+         document.getElementById("totalDeath").innerHTML = stringResponse.report.deaths;
+         document.getElementById("totalRecovered").innerHTML = stringResponse.report.recovered;
+         flagOfCountry=stringResponse.report.flag;
+          $("#my_image").attr("src",stringResponse.report.flag);
+      }
+  
+  });
+  }
+  
+  
+  </script>
 
 </head>
 <body>
-
-<font color="red"><b>Corona Tracker By Country</b> </font> <br>
+  <font color="red"><b>Global Corona Tracker by Country Map</b> </font> <br>
+  <div id="world-map" style="width: 600px; height: 400px"></div>
+  <br>
+    <font color="red"><b>Corona Tracker By Country</b> </font> <br>
 <input type="text" id="myInput">
 <button type="button" id="myBtn">Country</button>
 
@@ -33,44 +139,7 @@
 <br>
 <font color="blue"> &#169; Contact me at rabi007007@gmail.com </font>
 
-<script type="text/javascript">
 
-var flagOfCountry;
-
-$(document).ready(function(){
-    // Get value on button click and show alert
-    $("#myBtn").click(function(){
-        var countryName = $("#myInput").val();
-       // alert(str);
-       showCountryStatus1(countryName);
-
-    });
-});
-
-function showCountryStatus1(countryName)
-{
-$.ajax({
-
-    url: "https://covid19-server.chrismichael.now.sh/api/v1/ReportsByCountries/"+countryName,
-    dataType: "json",
-    crossDomain:true,
-    success: function( response ) {
-    	var stringResponse= JSON.parse(JSON.stringify(response));
-    	var flagOfCountry= stringResponse.report.flag;
-        console.log("ppa= "+stringResponse.report.country );
-       document.getElementById("countryAffected").innerHTML = stringResponse.report.country;
-       document.getElementById("caseReported").innerHTML = stringResponse.report.cases;
-       document.getElementById("totalDeath").innerHTML = stringResponse.report.deaths;
-       document.getElementById("totalRecovered").innerHTML = stringResponse.report.recovered;
-       flagOfCountry=stringResponse.report.flag;
-        $("#my_image").attr("src",stringResponse.report.flag);
-    }
-
-});
-}
-
-
-</script>
-
+  
 </body>
 </html>
