--- a/index.html
+++ b/index.html
@@ -71,18 +71,25 @@ function latestCoronaStatus()
 <script type="text/javascript">
 
   var flagOfCountry;
+  var flagOfCountry2;
   
   $(document).ready(function(){
       // Get value on button click and show alert
       $("#myBtn").click(function(){
           var countryName = $("#myInput").val();
          // alert(str);
-         showCountryStatus(countryName);
-  
+         showCountryStatus(countryName,"1st");
       });
+
+      $("#myBtn2").click(function(){
+          var countryName = $("#myInput2").val();
+         // alert(str);
+         showCountryStatus(countryName,"2nd");
+      });
+
   });
   
-  function showCountryStatus(countryName)
+  function showCountryStatus(countryName,countryPosition)
   {
   $.ajax({
   
@@ -93,12 +100,28 @@ function latestCoronaStatus()
         var stringResponse= JSON.parse(JSON.stringify(response));
         var flagOfCountry= stringResponse.report.flag;
           console.log("ppa= "+stringResponse.report.country );
+        if("1st"===countryPosition)
+        {
          document.getElementById("countryAffected").innerHTML = stringResponse.report.country;
          document.getElementById("caseReported").innerHTML = stringResponse.report.cases;
          document.getElementById("totalDeath").innerHTML = stringResponse.report.deaths;
          document.getElementById("totalRecovered").innerHTML = stringResponse.report.recovered;
          flagOfCountry=stringResponse.report.flag;
           $("#my_image").attr("src",stringResponse.report.flag);
+        }
+
+        if("2nd"===countryPosition)
+        {
+         document.getElementById("countryAffected2").innerHTML = stringResponse.report.country;
+         document.getElementById("caseReported2").innerHTML = stringResponse.report.cases;
+         document.getElementById("totalDeath2").innerHTML = stringResponse.report.deaths;
+         document.getElementById("totalRecovered2").innerHTML = stringResponse.report.recovered;
+         flagOfCountry2=stringResponse.report.flag;
+          $("#my_image2").attr("src",stringResponse.report.flag);
+        }
+
+
+         
       }
   
   });
@@ -112,29 +135,62 @@ function latestCoronaStatus()
   <font color="red"><b>Global Corona Tracker by Country Map</b> </font> <br>
   <div id="world-map" style="width: 600px; height: 400px"></div>
   <br>
-    <font color="red"><b>Corona Tracker By Country</b> </font> <br>
+    <font color="red"><b><marquee>Corona Tracker By Country</marquee></b> </font> <br>
 <input type="text" id="myInput">
-<button type="button" id="myBtn">Country</button>
+<button type="button" id="myBtn">Country1</button>
+
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<input type="text" id="myInput2">
+<button type="button" id="myBtn2">Country2</button>
 
 
 <br>
 <img id="my_image" src="" />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp;
+ <img id="my_image2" src="" />
 <table border="1">
     <tr >
+      <td>
+          <th> Country</th>
+          <th> Case</th>
+          <th> Death</th>
+          <th> recovered</th>
+      </td>
+      <td>
+        <th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        </th>
         <th> Country</th>
         <th> Case</th>
         <th> Death</th>
         <th> recovered</th>
+    </td>
     </tr>
 
     <tr >
-        <td> <p id="countryAffected"></p></td>
-        <td> <p id="caseReported"></p></td>
-        <td> <p id="totalDeath"></p></td>
-        <td> <p id="totalRecovered"></p></td>
+      <td>
+          <td><b> <p id="countryAffected"></p></b></td>
+          <td> <p id="caseReported"></p></td>
+          <td> <p id="totalDeath"></p></td>
+          <td> <p id="totalRecovered"></p></td>
+      </td>
+      <td>
+        <td> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+        </td>
+        <td> <b><p id="countryAffected2"></p></b></td>
+        <td> <p id="caseReported2"></p></td>
+        <td> <p id="totalDeath2"></p></td>
+        <td> <p id="totalRecovered2"></p></td>
+    </td>
     </tr>
 
 </table>
+
+
 <font color="grey">** Supporting any country like India,US,France,Germany,Italy,China,Brazil,Australia etc.</font>
 <br>
 <font color="blue"> &#169; Contact me at rabi007007@gmail.com </font>
