--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ function latestCoronaStatus()
 
 <font color="grey">** Supporting any country like India,US,France,Germany,Italy,China,Brazil,Australia etc.</font>
 <br>
-<font color="blue"> &#169; Contact me at rabi007007@gmail.com </font>
+<font color="blue"> &#169; Power রবি </font>
 
 
   
